Commit do Celular controller
